--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-samba (2:3.2.2-1) UNRELEASED; urgency=low
+samba (2:3.2.2-1) UNRELEASED; urgency=high
 
+  * High-urgency upload for security fix
   * New upstream release
     - Fix "/usr/lib/cups/backend/smb does not try port 139 anymore by default"
       Closes: #491881
